package edu.fiuba.algo3.Defenses;
import edu.fiuba.algo3.Attacker.Attacker;

public class WhiteTower extends Defense {

    protected int range(){
        return 3;
    }

    protected int damage(){
        return 1;
    }

    protected int timeOfConstruction(){
        return 1;
    }

    public String toString(){
        return "White Tower";
    }

}

